[package]
name = "cogsworth"
version = "0.1.0"
authors = ["aurumcodex <aurumcodex@protonmail.com>"]
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.2.13"
tracing-futures = "0.2.4"

[dependencies.serenity]
version = "0.9.0-rc.2"
# git = "https://github.com/serenity-rs/serenity.git"
# branch = "current"
# default-features = false
# features = [
#     "framework", "standard_framework",
#     "client", "gateway", "rustls_backend", "model"
# ]

[dependencies.tokio]
version = "0.2"
features = ["macros"]