[package]
name = "cogsworth"
version = "0.1.0"
authors = ["aurumcodex <aurumcodex@protonmail.com>"]
edition = "2018"
license = "Apache-2.0"

[profile.release]
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
rand = "0.7"
serenity = "0.9.0-rc.2"
tracing = "0.1"
tracing-subscriber = "0.2.13"
tracing-futures = "0.2.4"

[dependencies.tokio]
version = "0.2"
features = ["macros"]